tests/endtoend/failure/expected/error_init_list2.compile.out
error_init_list2.silly:1:1: error: For variable 'w', more initializers (3) specified than number of elements (2).

    1 | INT32 w[2] {1,2,3};
      | ^
